--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         />
         <meta name="apple-mobile-web-app-title" content="Grocerymart" />
         <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+
+        <!-- STYLES -->
+        <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
     <body></body>
 </html>
