--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Grocerymart</title>
+        <title>Home | Grocerymart</title>
 
         <!-- FONTS -->
         <link rel="stylesheet" href="./assets/gordita-font/stylesheet.css" />
@@ -31,6 +31,16 @@
 
         <!-- STYLES -->
         <link rel="stylesheet" href="./assets/css/main.css" />
+
+        <!-- SCRIPTS -->
+        <script src="./assets/js/scripts.js"></script>
     </head>
-    <body></body>
+    <body>
+        <header id="header"></header>
+        <script>
+            load("#header", "./template/header.html");
+        </script>
+        <main></main>
+        <footer></footer>
+    </body>
 </html>
