--- a/index.html
+++ b/index.html
@@ -3,55 +3,61 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home | Grocerymart</title>
+        <title>Grocerymart</title>
+        <link rel="preconnect" href="https://cdn.jsdelivr.net/" />
 
         <!-- FONTS -->
-        <link rel="stylesheet" href="./assets/gordita-font/stylesheet.css" />
-
+        <link
+            rel="stylesheet"
+            href="./assets/fonts/gordita-font/stylesheet.css"
+        />
         <!-- FAVICON -->
         <link
             rel="icon"
             type="image/png"
-            href="/assets/favicon/favicon-96x96.png"
+            href="./assets/img/logo/favicon/"
             sizes="96x96"
         />
         <link
             rel="icon"
             type="image/svg+xml"
-            href="/assets/favicon/favicon.svg"
+            href="./assets/img/logo/favicon//favicon.svg"
         />
-        <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+        <link
+            rel="shortcut icon"
+            href="./assets/img/logo/favicon//favicon.ico"
+        />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/assets/favicon/apple-touch-icon.png"
+            href="./assets/img/logo/favicon//apple-touch-icon.png"
         />
-        <meta name="apple-mobile-web-app-title" content="Grocerymart" />
-        <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+        <link
+            rel="manifest"
+            href="./assets/img/logo/favicon//site.webmanifest"
+        />
 
-        <!-- STYLES -->
-        <link rel="stylesheet" href="./assets/css/main.css" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="./assets/css/root.css" />
+        <link rel="stylesheet" href="./assets/css/grid.css" />
 
-        <!-- SCRIPTS -->
+        <!-- LAYOUT CSS -->
+        <link rel="stylesheet" href="./assets/css/layout/header.css" />
+
+        <!-- JS -->
         <script src="./assets/js/scripts.js"></script>
     </head>
     <body>
-        <div class="container">
-            <!-- HEADER -->
-            <header id="header"></header>
+        <!-- HEADER -->
+        <header class="header" id="header">
             <script>
-                load("#header", "./template/header.html");
+                load("header", "./templates/header.html");
             </script>
+        </header>
 
-            <!-- MAIN -->
-            <main></main>
+        <!-- MAIN -->
 
-            <!-- FOOTER -->
-            <footer id="footer">
-                <script>
-                    load("#footer", "./template/footer.html");
-                </script>
-            </footer>
-        </div>
+        <!-- FOOTER -->
     </body>
 </html>
