--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/css/root.css" />
+        <link rel="stylesheet" href="./assets/css/common.css" />
         <link rel="stylesheet" href="./assets/css/grid.css" />
-
-        <!-- LAYOUT CSS -->
+        <link rel="stylesheet" href="./assets/css/themes/light.css" />
+        <link rel="stylesheet" href="./assets/css/themes/dark.css" />
+        <link rel="stylesheet" href="./assets/css/responsive.css" />
         <link rel="stylesheet" href="./assets/css/layout/header.css" />
 
         <!-- JS -->
