--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <link rel="stylesheet" href="./assets/css/themes/dark.css" />
         <link rel="stylesheet" href="./assets/css/responsive.css" />
         <link rel="stylesheet" href="./assets/css/layout/header.css" />
+        <link
+            rel="stylesheet"
+            href="./assets/css/components/dropdown-menu.css"
+        />
 
         <!-- JS -->
         <script src="./assets/js/scripts.js"></script>
